Fix image width on narrow screens

--- a/content/assets/style.css
+++ b/content/assets/style.css
@@ -528,6 +528,10 @@ p.img {
     padding-top: 1vh;
 }
 
+p.img figure {
+    margin: 0;
+}
+
 p.img img {
     padding: 0;
     box-shadow: 0 1px 4px rgb(0 0 0 / 20%);
